--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "nodemon server.js",
     "test": "nodemon server.js"
   },
   "keywords": [],
@@ -21,6 +20,6 @@
     "node-geocoder": "^4.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"A
+    "nodemon": "^3.0.1"
   }
 }
